# fin

./: .gitignore  CLAUDE.md  pyproject.toml
configs/portfolio/: test_simple_buyhold.json
configs/shared/: simulated_cov_matrices.txt
lib/fincalc/: pyproject.toml
lib/fincalc/src/fincalc/: __init__.py  black_scholes.py  covariance.py  performance.py  risk.py  volatility.py
lib/findata/: pyproject.toml
lib/findata/src/findata/: __init__.py  cache.py  fetcher.py  persistence.py  returns.py
lib/finviz/: pyproject.toml
lib/finviz/src/finviz/: __init__.py  charts.py  formatters.py  styles.py
projects/collar/: demo.py  plan.md  pyproject.toml
projects/collar/lib/: __init__.py  pricing.py  volatility.py
projects/collar/src/: __init__.py  builder.py  capped_gains.py  comparator.py  greeks.py  scenario.py  structures.py  visualizer.py
projects/collar/tests/: __init__.py  test_capped_gains.py  test_collar.py  test_pricing.py  test_scenario.py  test_visualizer.py  test_volatility.py
projects/cover/: main.py  pyproject.toml
projects/cover/src/data/: dataset.py  synthetic.py
projects/cover/src/evaluation/: evaluator.py
projects/cover/src/inference/: denoise.py
projects/cover/src/models/: components.py  hybrid_denoiser.py
projects/cover/src/training/: loss.py  noise_schedules.py  trainer.py
projects/options/: README.md  pyproject.toml  simple_run.py
projects/options/src/: export_monthly_tables.py  get_tables.py  main.py  plot_monthly_lines.py  plot_monthly_options.py  run.py  show_tables.py  test_asymmetric_filtering.py  test_asymmetric_with_reference.py  test_date_sorting.py  test_installation.py  test_monthly_plot.py  view_tables.py
projects/options/src/examples/: elasticity_tables_demo.py  quick_elasticity_check.py  quickstart.py  toolkit_demo.py
projects/options/src/options_analysis/: __init__.py  black_scholes.py  cli.py  config.py  data_fetcher.py  data_persistence.py  option_processor.py  orchestrator.py  put_call_parity.py  toolkit.py  visualizer.py
projects/options/stochastic/: jumpdifv0.py  jumpdifv1.py  jumpdifv2.py  main.py  pyproject.toml
projects/portfolio/src/: main.py  performance_engine.py  portfolio.py  run_mc.py
projects/portfolio/src/api/services/: simulation.py
projects/portfolio/src/engine/: backtest.py  portfolio.py
projects/portfolio/src/srcideas/: jumpdiff.py  portoptim.py  universal_methods.py
projects/portfolio/src/visualization/: backtest.py  comparison.py  heatmaps.py
