[project]
name = "findata"
version = "0.1.0"
description = "Financial data fetching, caching, and persistence"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "yfinance>=0.2.65",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
