[project]
name = "finviz"
version = "0.1.0"
description = "Financial visualization utilities"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
    "plotly>=6.5.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
