[project]
name = "cover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.5.0,<2.6",
    "torchaudio>=2.5.0,<2.6",
    "torchvision>=0.20.0,<0.21",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
index-strategy = "unsafe-best-match"
